Weight Paint + Pose Mode: [m] key does not toggle Face Selection Masking #30063

Closed
opened 2012-02-03 19:59:55 +01:00 by Ryan King · 7 comments

%%%Expected Behavior:

  1. Parent a bone to the default Cube
  2. Select the Cube and [Ctrl+Tab] to Weight Paint mode
  3. Press - to enable Face Selection Masking. You will see the edges of the cube turn black-and-white dotted.

Unexpected Behavior:
4) Now, [RMB] the Armature, and [Ctrl+Tab] into Pose Mode.
5) Select a Bone
6) Select the Cube (which will put you back into Weight Paint Mode), and
7) Press - [x] --> You will get the "Move" dialog instead of the Face Selection Masking toggling.

Tested on 2.61-official and a recent SVN build. (I can get more involved with the details of my system if you have trouble replicating, of course).

Thanks in advance.%%%

%%%Expected Behavior: 1) Parent a bone to the default Cube 2) Select the Cube and [Ctrl+Tab] to Weight Paint mode 3) Press - [x] to enable Face Selection Masking. You will see the edges of the cube turn black-and-white dotted. Unexpected Behavior: 4) Now, [RMB] the Armature, and [Ctrl+Tab] into Pose Mode. 5) Select a Bone 6) Select the Cube (which will put you back into Weight Paint Mode), and 7) Press - [x] --> You will get the "Move" dialog instead of the Face Selection Masking toggling. Tested on 2.61-official and a recent SVN build. (I can get more involved with the details of my system if you have trouble replicating, of course). Thanks in advance.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%tagged as postponed. better not do these kinds of changes so close to release.%%%

%%%tagged as postponed. better not do these kinds of changes so close to release.%%%

%%%Can't actually reproduce the issue. I can not select armature with a RMB when cube is in texture paint mode, can only select it from an outliner. But in this case m-key works nice when i select back the cube.
Maybe you can attach blend file with some more detailed instructions?%%%

%%%Can't actually reproduce the issue. I can not select armature with a RMB when cube is in texture paint mode, can only select it from an outliner. But in this case m-key works nice when i select back the cube. Maybe you can attach blend file with some more detailed instructions?%%%
Author

%%%Attaching .blend that has everything set up:

  • Top Armature is in Object Mode, so it does the right 'm' behavior
  • Bottom Armature is in Pose Mode, so it does the incorrect 'm' behavior%%%
%%%Attaching .blend that has everything set up: - Top Armature is in Object Mode, so it does the right 'm' behavior - Bottom Armature is in Pose Mode, so it does the incorrect 'm' behavior%%%

%%%Ok, see the issue now. But it looks to be intended behavior introduced in 32461. Not sure if it'll be nice idea just to change behavior, maybe hotkeys should be separated.
Campbell, what do you think?%%%

%%%Ok, see the issue now. But it looks to be intended behavior introduced in 32461. Not sure if it'll be nice idea just to change behavior, maybe hotkeys should be separated. Campbell, what do you think?%%%

%%%fixed r50458.%%%

%%%fixed r50458.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30063
No description provided.