fix [#30063] Weight Paint + Pose Mode: [m] key does not toggle Face Selection Masking

disallow some pose operators when weight paint mode is enabled.